fix margin below "Featured Apps" on mobile (bug 960815)

--- a/hearth/media/css/header.styl
+++ b/hearth/media/css/header.styl
@@ -336,6 +336,9 @@
             font-weight: 400;
         }
     }
+    .featured .featured-header {
+        padding-bottom: 20px;
+    }
 }
 
 // search results tile expand toggle
